@@ -43,6 +43,12 @@ parser.add_argument('-t',
                     metavar = 'TEMPLATE',
                     default = settings.DEFAULT_TEMPLATE
                    )
+parser.add_argument('-b',
+                    required = False,
+                    help = 'Base Python version to package for (default: "%s").' % settings.DEFAULT_PYTHON_VERSION,
+                    metavar = 'BASE_PYTHON',
+                    default = settings.DEFAULT_PYTHON_VERSION
+                   )
 parser.add_argument('-p',
                     required = False,
                     help = 'Additional Python versions to include in the specfile (e.g -p3 for %%{?with_python3}). Can be specified multiple times.',
@@ -62,6 +68,7 @@ convertor = Convertor(name = ns.__dict__['n'],
                       source_from = ns.__dict__['s'],
                       save_dir = ns.__dict__['d'],
                       template = ns.__dict__['t'],
+                      base_python_version = ns.__dict__['b'],
                       python_versions = ns.__dict__['p'])
 
 print convertor.convert().encode(locale.getpreferredencoding())
