@@ -18,12 +18,14 @@ class Convertor(object):
                  template = settings.DEFAULT_TEMPLATE,
                  source_from = settings.DEFAULT_PKG_SOURCE,
                  metadata_from = settings.DEFAULT_METADATA_SOURCE,
+                 base_python_version = settings.DEFAULT_PYTHON_VERSION,
                  python_versions = []):
         self.name = name
         self.version = version
         self.save_dir = save_dir
         self.source_from = source_from
         self.metadata_from = metadata_from
+        self.base_python_version = base_python_version
         self.python_versions = python_versions
         self.template = template
         if not self.template.endswith('.spec'):
@@ -49,6 +51,7 @@ class Convertor(object):
         self.name, self.version = self.getter().get_name_version()
 
         data = self.metadata_extractor(local_file).extract_data()
+        data.base_python_version = self.base_python_version
         data.python_versions = self.python_versions
         jinja_env = jinja2.Environment(loader = jinja2.ChoiceLoader([
                                                     jinja2.FileSystemLoader(['/']),
