@@ -5,7 +5,7 @@
 %global with_python{{ pv }} 1
 {%- endfor %}
 
-Name:           {{ data.pkg_name|macroed_pkg_name }}
+Name:           {{ data.pkg_name|macroed_pkg_name|name_for_python_version(data.base_python_version) }}
 Version:        {{ data.version }}
 Release:        1%{?dist}
 Summary:        {{ data.summary }}
@@ -17,22 +17,22 @@ Source0:        {{ data.url }}
 {%- if not data.has_extension %}
 BuildArch:      noarch
 {%- endif %}
-{{ dependencies(data.build_deps, False, '') }}
+{{ dependencies(data.build_deps, False, data.base_python_version, data.base_python_version) }}
 {%- for pv in data.python_versions %}
-{{ dependencies(data.build_deps, False, pv) }}
+{{ dependencies(data.build_deps, False, pv, data.base_python_version) }}
 {%- endfor %}
-{{ dependencies(data.runtime_deps, True, '') }}
+{{ dependencies(data.runtime_deps, True, data.base_python_version, data.base_python_version) }}
 {%- for pv in data.python_versions %}
-{{ dependencies(data.runtime_deps, True, pv) }}
+{{ dependencies(data.runtime_deps, True, pv, data.base_python_version) }}
 {%- endfor %}
 
 %description
 {{ data.description|wordwrap }}
 {% call(pv) for_python_versions(data.python_versions) -%}
-%package -n     {{ data.name|macroed_pkg_name|for_python_version(pv) }}
+%package -n     {{ data.name|macroed_pkg_name|name_for_python_version(pv) }}
 Summary:        {{ data.summary }}
 
-%description -n {{ data.name|macroed_pkg_name|for_python_version(pv) }}
+%description -n {{ data.name|macroed_pkg_name|name_for_python_version(pv) }}
 {{ data.description|wordwrap }}
 {%- endcall %}
 
@@ -42,27 +42,27 @@ Summary:        {{ data.summary }}
 # Remove bundled egg-info
 rm -rf %{pypi_name}.egg-info
 {%- endif %}
-{% call(pv) for_python_versions([''] + data.python_versions) -%}
-{%- if pv -%}
+{% call(pv) for_python_versions([data.base_python_version] + data.python_versions, data.base_python_version) -%}
+{%- if pv != data.base_python_version -%}
 rm -rf %{py{{pv}}dir}
 cp -a . %{py{{pv}}dir}
 find %{py{{pv}}dir} -name '*.py' | xargs sed -i '1s|^#!python|#!%{__python{{pv}}}|'
 {%- endif %}
 {%- if data.sphinx_dir %}
 # generate html docs {# TODO: generate properly for other versions (pushd/popd into their dirs...) #}
-{% if pv %}python{{ pv }}-{% endif %}sphinx-build {{ data.sphinx_dir }} html
+{% if pv != data.base_python_version %}python{{ pv }}-{% endif %}sphinx-build {{ data.sphinx_dir }} html
 # remove the sphinx-build leftovers
 rm -rf html/.{doctrees,buildinfo}
 {%- endif %}
 {% endcall %}
 
 %build
-{%- call(pv) for_python_versions([''] + data.python_versions) -%}
-{%- if pv -%}
+{%- call(pv) for_python_versions([data.base_python_version] + data.python_versions, data.base_python_version) -%}
+{%- if pv != data.base_python_version -%}
 pushd %{py{{ pv }}dir}
 {%- endif %}
 {% if data.has_extension %}CFLAGS="$RPM_OPT_FLAGS" {% endif %}%{__python{{ pv }}} setup.py build
-{% if pv -%}
+{% if pv != data.base_python_version -%}
 popd
 {%- endif %}
 {%- endcall %}
@@ -73,41 +73,29 @@ popd
 # overwritten with every setup.py install (and we want the python2 version
 # to be the default for now).
 {%- endif -%}
-{%- call(pv) for_python_versions(data.python_versions + ['']) -%}
-{%- if pv -%}
+{%- call(pv) for_python_versions(data.python_versions + [data.base_python_version], data.base_python_version) -%}
+{%- if pv != data.base_python_version -%}
 pushd %{py{{ pv }}dir}
 {%- endif %}
 %{__python{{ pv }}} setup.py install --skip-build --root %{buildroot}
-{%- if pv %}
+{%- if pv != data.base_python_version %}
 popd
 {%- endif %}
 {%- endcall %}
 
 
-%files
-%doc {% if data.sphinx_dir %}html {% endif %}{{ data.doc_files|join(' ') }}
-{%- if data.has_packages %}
-%{python_sitelib}/%{pypi_name}
-{%- endif %}
-{%- for module in data.py_modules %}
-%{python_sitelib}/{% if data.name == module %}%{pypi_name}{% else %}{{ module }}{% endif %}.py*
-{%- endfor %}
-%{python_sitelib}/%{pypi_name}-%{version}-py?.?.egg-info
-{%- if data.has_extension %}
-%{python_sitearch}/%{pypi_name}
-{%- endif %}
-{% call(pv) for_python_versions(data.python_versions) -%}
-%files -n {{ data.name|macroed_pkg_name|for_python_version(pv) }}
+{% call(pv) for_python_versions([data.base_python_version] + data.python_versions, data.base_python_version) -%}
+%files{% if pv != data.base_python_version %} -n {{ data.name|macroed_pkg_name|name_for_python_version(pv) }}{% endif %}
 %doc {% if data.sphinx_dir %}html {% endif %}{{ data.doc_files|join(' ') }}
   {%- if data.has_packages %}
-%{python{{pv}}_sitelib}/%{pypi_name}
+{{ '%{python_sitelib}'|sitedir_for_python_version(pv) }}/%{pypi_name}
   {%- endif %}
   {%- for module in data.py_modules %}
-%{python{{ pv }}_sitelib}/{% if data.name == module %}%{pypi_name}{% else %}{{ module }}{% endif %}.py*
+{{ '%{python_sitelib}'|sitedir_for_python_version(pv) }}/{% if data.name == module %}%{pypi_name}{% else %}{{ module }}{% endif %}.py*
   {%- endfor %}
-%{python{{pv}}_sitelib}/%{pypi_name}-%{version}-py?.?.egg-info
+{{ '%{python_sitelib}'|sitedir_for_python_version(pv) }}/%{pypi_name}-%{version}-py?.?.egg-info
   {%- if data.has_extension %}
-%{python{{ pv }}_sitearch}/%{pypi_name}
+{{ '%{python_sitearch}'|sitedir_for_python_version(pv) }}/%{pypi_name}
   {%- endif %}
 {%- endcall %}
 
