@@ -1,3 +1,5 @@
+* Add support for pure Python 3 specfiles.
+* Refactor templates using macros.
 * Add listing py_modules from setup.py setup() in %files (thanks to Pádraig Brady for pointing this direction).
 * Fix encoding issues (thanks to Pádraig Brady).
 
